# clinica_raimundo

./: .gitignore  .railwayignore  .replit  COMO_POPULAR_BANCO_RAILWAY.md  COMO_POPULAR_RAILWAY.md  COMO_USAR_URL_CORRECAO.md  CORRECAO_CALENDARIO.md  CORRECAO_TIMEZONE_VIA_URL.md  CORRECOES_PAINEL_ADMIN.md  CORRIGIR_AGENDAMENTOS_RAILWAY.md  CORRIGIR_MEDICOS_RAILWAY.md  DEPLOY_RAILWAY.md  DIAGNOSTICO_LOGIN_MEDICO.md  EXECUTAR_NO_RAILWAY.md  FUNCIONALIDADES_MEDICOS_ADMIN.md  GUIA_COMPLETO.md  GUIA_RAILWAY_SIMPLES.md  INDICE_RAILWAY.md  INICIAR_BANCO_RAILWAY.md  INSTRUCOES_CORRECAO_TIMEZONE.md  INSTRUCOES_RAILWAY_SETUP.md  MIGRATION_AUTOMATICA.md  NOVA_DISTRIBUICAO_MEDICOS.md  POPULAR_RAILWAY_VIA_URL.md  RAILWAY.md  RAILWAY_FIX.md  RAILWAY_SETUP_FINAL.md  README_RAILWAY.md  SOLUCAO_LOGIN_RAILWAY.md  SOLUCAO_RAILWAY.md  URLS_POPULACAO.md  VERIFICACAO_RAPIDA.md  chatbot_service.py  cookies.txt  cookies_debug.txt  criar_agendamentos_teste.py  debug_context.py  debug_session.py  diagnosticar_railway.py  diagnostico_agendamentos.py  (+16 more)
app/: __init__.py
app/blueprints/: __init__.py  admin.py  api.py  appointments.py  auth.py  main.py  setup.py
attached_assets/: Pasted-Quero-que-voc-gere-um-sistema-completo-de-gest-o-de-cl-nica-m-dica-em-Python-Flask-para-o-site-ht-1758204119931_1758204119933.txt  Pasted-Starting-Container-2025-10-14-13-32-29-0000-1-INFO-Starting-gunicorn-23-0-0-2025-10-14-13--1760448894176_1760448894180.txt  chatbot_1758905478344.json
scripts/: auto_migrate.py  fix_railway_admin.py  fix_timezone_agendamentos.py  seed_data.py  test_login.py
(+28 files in other folders)
